--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 
-
 <body>
     <header class="cabecalho">
-        <img class="fotologo" src="./Logo.png" alt="Logo Cryfort S R">
+        <img class="fotologo" src="logo.png" alt="Logo Cryfort S R">
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-item" href="https://www.linkedin.com/in/cryfort-stone-8951831a1">Linkedin</a>
             <a class="cabecalho-menu-item" href="https://www.instagram.com/cryfortstonee/">Instagram</a>
@@ -36,7 +35,7 @@
         <section class="conteudo-secundario">
             <h3 class="conteudo-secundario-titulo"> Quem sou eu?</h3>
             <p class="conteudo-secundario-paragrafo">Estudante 9° Período de <strong>Direito na Universidade do Estado de Minas Gerais - UEMG</strong></p>
-            <p class="conteudo-secundario-paragrafo">Atualmente trabalhando como analista de sistemas na <strong>PrefeituraMunicipal de Frutal-MG</strong> </p>
+            <p class="conteudo-secundario-paragrafo">Atualmente trabalhando como analista de sistemas na <strong>Prefeitura Municipal de Frutal-MG</strong> </p>
             <p class="conteudo-secundario-paragrafo">Analista de sistemas na empresa <strong>Focus Sistemas - LTDA</strong> </p>
         </section>
     </main>
