chore: add new files

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="cabecalho">
-        <img class="fotologo" src="logo.png" alt="Logo Cryfort S R">
+        <img class="fotologo" src="./logo.png" alt="Logo Cryfort S R">
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-item" href="https://www.linkedin.com/in/cryfort-stone-8951831a1">Linkedin</a>
             <a class="cabecalho-menu-item" href="https://www.instagram.com/cryfortstonee/">Instagram</a>
@@ -40,7 +40,7 @@
     </main>
 
     <footer class="rodape">
-        <img class="rodape-imagem" src="./roda.png" alt="nome rodapé Cryfort">
+        <img class="rodape-imagem" src="./rodape.png" alt="nome rodapé Cryfort">
     </footer>
 </body>
 
