refactor: add folders to separate files

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Está é uma página de apresentação com o intuíto de aprender a programar">
-    <title>Landing Page</title>
-    <link rel="stylesheet" type="text/css" href="estilo.css">
+    <title>Cryfort</title>
+    <link rel="stylesheet" type="text/css" href="../styles/style.css">
+    <link rel="icon" href="../imgs/favicon.png">
 </head>
 
 <body>
     <header class="cabecalho">
-        <img class="fotologo" src="./logo.png" alt="Logo Cryfort S R">
+        <img class="fotologo" src="../imgs/logo.png" alt="Logo Cryfort S R">
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-item" href="https://www.linkedin.com/in/cryfort-stone-8951831a1">Linkedin</a>
             <a class="cabecalho-menu-item" href="https://www.instagram.com/cryfortstonee/">Instagram</a>
@@ -22,25 +23,24 @@
 
     <main class="conteudo">
         <section class="conteudo-principal">
-           
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-escrito-titulo">Cryfort Stone Ribeiro</h1>
                 <h2 class="conteudo-principal-escrito-subtitulo">Em busca de se tornar programador!!!</h2>
                 <a class="conteudo-principal-escrito-botao" href="https://github.com/Cryfort">GitHub</a>
             </div>
 
-            <img class="foto-apresentação" src="Cryfort.jpeg" alt="Foto Cryfort">
+            <img class="foto-apresentação" src="../imgs/cryfort.jpeg" alt="Foto Cryfort">
         </section>
         <section class="conteudo-secundario">
             <h3 class="conteudo-secundario-titulo"> Quem sou eu?</h3>
             <p class="conteudo-secundario-paragrafo">Estudante 9° Período de <strong>Direito na Universidade do Estado de Minas Gerais - UEMG</strong></p>
-            <p class="conteudo-secundario-paragrafo">Atualmente trabalhando como analista de sistemas na <strong>Prefeitura Municipal de Frutal-MG</strong> </p>
+            <p class="conteudo-secundario-paragrafo">Atualmente trabalhando como analista de sistemas na <strong>Prefeitura Municipal de Frutal-MG</strong></p>
             <p class="conteudo-secundario-paragrafo">Analista de sistemas na empresa <strong>Focus Sistemas - LTDA</strong> </p>
         </section>
     </main>
 
     <footer class="rodape">
-        <img class="rodape-imagem" src="./rodape.png" alt="nome rodapé Cryfort">
+        <img class="rodape-imagem" src="../imgs/signature.png" alt="nome rodapé Cryfort">
     </footer>
 </body>
 
