--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Está é uma página de apresentação com o intuíto de aprender a programar">
     <title>Cryfort</title>
-    <link rel="stylesheet" type="text/css" href="../styles/style.css">
-    <link rel="icon" href="../imgs/favicon.png">
+    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="icon" href="./imgs/favicon.png">
 </head>
 
 <body>
     <header class="cabecalho">
-        <img class="fotologo" src="../imgs/logo.png" alt="Logo Cryfort S R">
+        <img class="fotologo" src="./imgs/logo.png" alt="Logo Cryfort S R">
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-item" href="https://www.linkedin.com/in/cryfort-stone-8951831a1">Linkedin</a>
             <a class="cabecalho-menu-item" href="https://www.instagram.com/cryfortstonee/">Instagram</a>
@@ -29,7 +29,7 @@
                 <a class="conteudo-principal-escrito-botao" href="https://github.com/Cryfort">GitHub</a>
             </div>
 
-            <img class="foto-apresentação" src="../imgs/cryfort.jpeg" alt="Foto Cryfort">
+            <img class="foto-apresentação" src="./imgs/cryfort.jpeg" alt="Foto Cryfort">
         </section>
         <section class="conteudo-secundario">
             <h3 class="conteudo-secundario-titulo"> Quem sou eu?</h3>
@@ -40,7 +40,7 @@
     </main>
 
     <footer class="rodape">
-        <img class="rodape-imagem" src="../imgs/signature.png" alt="nome rodapé Cryfort">
+        <img class="rodape-imagem" src="./imgs/signature.png" alt="nome rodapé Cryfort">
     </footer>
 </body>
 
