--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Está é uma página de apresentação com o intuíto de aprender a programar">
-    <title>Cryfort</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="icon" href="./imgs/favicon.png">
+    <link rel="stylesheet" href="responsive.css">
+
+    <title>Cryfort</title>
 </head>
 
 <body>
@@ -43,6 +45,5 @@
         <img class="rodape-imagem" src="./imgs/signature.png" alt="nome rodapé Cryfort">
     </footer>
 </body>
-
 
 </html>
