chore: text modification

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="conteudo-principal">
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-escrito-titulo">Cryfort Stone Ribeiro</h1>
-                <h2 class="conteudo-principal-escrito-subtitulo">Em busca de se tornar programador!!!</h2>
+                <h2 class="conteudo-principal-escrito-subtitulo">Buscando me tornar Desenvolvedor Front-End</h2>
                 <a class="conteudo-principal-escrito-botao" href="https://github.com/Cryfort">GitHub</a>
             </div>
 
@@ -36,8 +36,8 @@
         <section class="conteudo-secundario">
             <h3 class="conteudo-secundario-titulo"> Quem sou eu?</h3>
             <p class="conteudo-secundario-paragrafo">Estudante 9° Período de <strong>Direito na Universidade do Estado de Minas Gerais - UEMG</strong></p>
-            <p class="conteudo-secundario-paragrafo">Atualmente trabalhando como analista de sistemas na <strong>Prefeitura Municipal de Frutal-MG</strong></p>
-            <p class="conteudo-secundario-paragrafo">Analista de sistemas na empresa <strong>Focus Sistemas - LTDA</strong> </p>
+            <p class="conteudo-secundario-paragrafo">Atualmente trabalho como Técnico de Informática na <strong>Prefeitura Municipal de Frutal-MG</strong></p>
+            <p class="conteudo-secundario-paragrafo"> E também sou prestador de serviços como Suporte de Sistemas na empresa <strong>Focus Sistemas - LTDA</strong> </p>
         </section>
     </main>
 
