chore: add new target function

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header class="cabecalho">
         <img class="fotologo" src="./imgs/logo.png" alt="Logo Cryfort S R">
         <nav class="cabecalho-menu">
-            <a class="cabecalho-menu-item" href="https://www.linkedin.com/in/cryfort-stone-8951831a1">Linkedin</a>
-            <a class="cabecalho-menu-item" href="https://www.instagram.com/cryfortstonee/">Instagram</a>
-            <a class="cabecalho-menu-item" href="https://www.facebook.com/cryfortribeiro/">Facebook</a>
+            <a class="cabecalho-menu-item" href="https://www.linkedin.com/in/cryfort-stone-8951831a1" target="_blank">Linkedin</a>
+            <a class="cabecalho-menu-item" href="https://www.instagram.com/cryfortstonee/" target="_blank">Instagram</a>
+            <a class="cabecalho-menu-item" href="https://www.facebook.com/cryfortribeiro/" target="_blank">Facebook</a>
         </nav>
     </header>
 
@@ -28,7 +28,7 @@
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-escrito-titulo">Cryfort Stone Ribeiro</h1>
                 <h2 class="conteudo-principal-escrito-subtitulo">Buscando me tornar Desenvolvedor Front-End</h2>
-                <a class="conteudo-principal-escrito-botao" href="https://github.com/Cryfort">GitHub</a>
+                <a class="conteudo-principal-escrito-botao" href="https://github.com/Cryfort" target="_blank">GitHub</a>
             </div>
 
             <img class="foto-apresentação" src="./imgs/cryfort.jpeg" alt="Foto Cryfort">
